agregando componente como funciona

--- a/src/app/como-funciona/como-funciona.component.html
+++ b/src/app/como-funciona/como-funciona.component.html
@@ -1,9 +1,23 @@
-<h1>¿Como Funciona?</h1>
+<h3>¿Como Funciona?</h3>
 <p class="lead">
-    Se trata de ahorrar dinero
-  </p>
+    Se trata de ahorrar dinero</p>
   <p>
     Todo comienza inocentemente. Entras a tu sitio web favorito que vende ropa, necesitas comprar un nuevo accesorio para tu auto, estás buscando una nueva arandela porque la antigua está averiada, estás navegando a través de una amplia gama de productos, estás a un paso de la compra y entonces este pensamiento pequeño, inocente viene a tu mente. "¿No podría ser más barato?" Estamos aquí para decirte exactamente eso: ¡SÍ, puede ser más barato! Incluso vamos a mostrarte cómo.
-
+<br>
     AppFood está en el lado luminoso de la fuerza de Internet. No te prometemos una vida despreocupada y próspera, liposucción sin dolor o suavizar tus arrugas con un toque de varita mágica (o crema en este caso). Te estamos dando algo que realmente creemos debe ser accesible a todos los usuarios de Internet de todo el mundo - la posibilidad de comprar en línea gastando menos. Puedes pensar que la alta calidad de los bienes y servicios equivale a precios altos. A veces es cierto que tengamos que pagar más por algo super valioso.
   </p>
+<p class="lead">
+    Come mas Gasta menos</p>
+  <p>
+  Te preguntas ¿Cómo es posible? ¿Y por qué sigues perdiendo esas ofertas? ¡Es hora de cambiar! Ya estás aquí y lo que vas a encontrar en Picodi es el acceso ilimitado a las compras online más baratas. Ya sea artículos que aparecen en revistas de Moda, las mejores marcas, o tiendas más pequeñas que ofrecen nichos y productos únicos difíciles de encontrar en otro lugar.
+  </p>
+<p class="lead">
+    ¿Que obtienes con nosotros?</p>
+  <p>
+  Hemos diseñado las mejores soluciones para el uso fácil y eficaz de nuestro sitio web. Las categorías son intuitivas y nuestra interfaz, fácil de usar, está respaldada por instrucciones claras para que no te pierdas en tu misión de buscar de descuentos. Además, tenemos tantos cupones descuento y promociones que estamos dispuestos a compartir con tanta gente como sea posible.
+  </p>
+<p class="lead">
+  ¿Cual es el truco?</p>
+<p>
+El único riesgo que tienes con Picodi es que finalmente vas a comprar todo lo que tu corazón quiere y te quedarás sin nada nuevo qué desear. Este estado es sólo temporal, y se puede arreglar fácilmente en tu siguiente visita a AppFood!
+</p>
