--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" style="color:white;" aria-current="page" href="#">Top 15</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color:white;" href="../como-funciona/como-funciona.component.html">¿Como funciona?</a>
+                <a class="nav-link" style="color:white;" routerLink="/como-funciona" routerLinkActive="active" ariaCurrentWhenActive="page">¿Como funciona?</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="color:white;" href="#">Iniciar Sesion</a>
@@ -24,6 +24,5 @@
                 Registrese
               </button>  
         </ul>
-        
     </div>
 </nav>
