--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" style="color:white;" routerLink="/como-funciona" routerLinkActive="active" ariaCurrentWhenActive="page">¿Como funciona?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color:white;" href="#">Iniciar Sesion</a>
+                <a class="nav-link" style="color:white;" routerLink="/iniciar-sesion" routerLinkActive="active">Iniciar Sesion</a>
             </li>  
             <button type="button" class="btn btn-light" border-color:white>
                 Registrese
