--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -1,17 +1,42 @@
-<h3>Iniciar Sesion</h3>
-<form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<br>
+<ul class="h4">Iniciar Sesion</ul>
+<br>
+<div class="row">
+  <div class="col"><img src="../../assets/images/iniciar-sesion.png" alt=""></div>
+  <div class="col">
+    <form>
+      <div class="form-group row">
+      <label for="colFormLabel" class="col-sm-10 col-form-label">Correo Electronico</label>
+      <div class="col-md-6 mb-3">
+      <input type="email" class="form-control" style="border-color:#595661;" id="colFormLabel">
     </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+
+    <label for="inputPassword5" class="col-sm-10 col-form-label">Contraseña</label>
+    <div class="col-md-6 mb-3">
+      <input type="password" class="form-control" style="border-color:#595661 ;" id="inputPassword5" >
+    <small id="passwordHelpBlock" class="form-text text-muted">
+        Su contraseña debe tener entre 8 y 20 caracteres, contener letras y números, y no debe contener espacios, caracteres especiales ni emoji.
+    </small>
     </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+      <div class="col-sm-10" >
+        <div class="form-check" >
+          <input class="form-check-input" style="border-color:#595661;" type="checkbox" id="autoSizingCheck2">
+          <label class="form-check-label" for="autoSizingCheck2">
+            Recordarme en este dispositivo
+          </label>
+        </div>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" style="border-color:#595661;" type="checkbox" value="" id="invalidCheck" required>
+        <label class="form-check-label" for="invalidCheck">
+          Acepto terminos y condiciones
+        </label>
+        </div>
+      <br>
+      <div class="col-sm-10">
+        <button type="submit" class="btn btn-primary" style="background-color: #595661 ; border-color: white ;">Entrar</button>
+      </div>
   </form>
+</div>
+</div>
