terminando componener de registro

--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -38,5 +38,9 @@
         <button type="submit" class="btn btn-primary" style="background-color: #595661 ; border-color: white ;">Entrar</button>
       </div>
   </form>
+  <br>
+  <small id="passwordHelpBlock" class="form-text text-muted" >
+    ¿Ya tienes una cuenta? <a class="nav-link" routerLink="/iniciar-sesion" routerLinkActive="active">Inicia Sesion</a>
+  </small>
 </div>
 </div>
