--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar" style="background-color: #595661;">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="assets/images/restaurant-icon.jpg" alt="" width="50" height="40">
+            <img src="../../assets/images/restaurant-icon.png" alt="" width="50" height="40">
             <span class="navbar-text" style="color:white ;">
                 FoodCupons
               </span>
@@ -20,7 +20,7 @@
             <li class="nav-item">
                 <a class="nav-link" style="color:white;" routerLink="/iniciar-sesion" routerLinkActive="active">Iniciar Sesion</a>
             </li>  
-            <button type="button" class="btn btn-light" border-color:white>
+            <button type="button" class="btn btn-light;" style="background-color:white ;border-color:#b08e44 ;" routerLink="/registrese">
                 Registrese
               </button>  
         </ul>
