--- a/src/app/registrese/registrese.component.html
+++ b/src/app/registrese/registrese.component.html
@@ -1,1 +1,83 @@
-<p>registrese works!</p>
+<br>
+<h3 style="margin-left: 2rem;">Registrese</h3>
+<br>
+    <div class="row"> 
+        <div class="col" style="margin-left: 2rem;"> 
+            <form class="needs-validation" novalidate>
+                <br>
+                <div class="form-row">
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustom01">Nombre</label>
+                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom01" required>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustom02">Apellido</label>
+                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom02" required>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustom03">Correo</label>
+                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom03" required>
+                    <div class="valid-feedback">
+                      Looks good!
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustomUsername" >Nombre de usuario</label>
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"style="border-color:#595661;"  id="inputGroupPrepend">@</span>
+                      </div>
+                      <input type="text" class="form-control" style="border-color:#595661;" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                      <div class="invalid-feedback">
+                        Please choose a username.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row">
+                </div>
+                <div class="form-group">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox"style="border-color:#595661;" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck" style="font-size:0.8rem ;">
+                    Al registrarse, confirma haber leído y aceptado Términos y condiciones y la Política de privacidad.
+                    </label>
+                    <div class="invalid-feedback">
+                      You must agree before submitting.
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <button class="btn btn-primary" style="background-color:#595661 ;border-color: white" type="submit">Crear cuenta</button>
+              </form>
+        </div> 
+        <div class="col"> <img src="../../assets/images/registro.png" alt=""></div>
+   
+
+  
+  <script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+  (function() {
+    'use strict';
+    window.addEventListener('load', function() {
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      var forms = document.getElementsByClassName('needs-validation');
+      // Loop over them and prevent submission
+      var validation = Array.prototype.filter.call(forms, function(form) {
+        form.addEventListener('submit', function(event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    }, false);
+  })();
+  </script>
