--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,6 +17,6 @@
     </div>
     <span class="navbar-brand" style="color:#595661 ;">
         FoodCupons
-        <img src="assets/images/restaurant-icon.jpg" alt="" width="50" height="40">
+        <img src="../../assets/images/restaurant-icon2.png" alt="" width="50" height="40">
     </span>
 </nav>
