--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         </a>
         <ul class="nav ">
             <li class="nav-item">
-                <a class="nav-link" style="color:#595661;" aria-current="page" href="#">Terminos de Uso</a>
+                <a class="nav-link" style="color:#595661;" routerLink="/terminos-de-uso" routerLinkActive="active">Terminos de Uso</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="color:#595661;" href="#">Politicas de privacidad</a>
