--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link" style="color:#595661;" routerLink="/terminos-de-uso" routerLinkActive="active">Terminos de Uso</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color:#595661;" href="#">Politicas de privacidad</a>
+                <a class="nav-link" style="color:#595661;" routerLink="/politicas-de-privacidad" routerLinkActive="active">Politicas de privacidad</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="color:#595661;" href="#">Contacto</a>
