--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" style="color:#595661;" routerLink="/politicas-de-privacidad" routerLinkActive="active">Politicas de privacidad</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="color:#595661;" href="#">Contacto</a>
+                <a class="nav-link" style="color:#595661;" routerLink="/contacto" routerLinkActive="active">Contacto</a>
             </li>  
         </ul> 
     </div>
