Agregando componente de cuenta con su pagina de inicio

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <br>
 <nav class="navbar " style="background-color: #b08e44; ">
     <div class="container justify-content-start">
-        <a class="navbar-brand" href="#">   
+        <a class="navbar-brand" href="#">
         </a>
         <ul class="nav ">
             <li class="nav-item">
@@ -12,8 +12,11 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" style="color:#595661;" routerLink="/contacto" routerLinkActive="active">Contacto</a>
-            </li>  
-        </ul> 
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color:#595661;" routerLink="/account" routerLinkActive="active">Cuenta</a>
+          </li>
+        </ul>
     </div>
     <span class="navbar-brand" style="color:#595661 ;">
         FoodCupons
