--- a/src/app/registrese/registrese.component.html
+++ b/src/app/registrese/registrese.component.html
@@ -1,42 +1,133 @@
 <br>
 <h3 style="margin-left: 2rem;">Registrese</h3>
 <br>
-    <div class="row"> 
-        <div class="col" style="margin-left: 2rem;"> 
-            <form class="needs-validation" novalidate>
+    <div class="row">
+        <div class="col" style="margin-left: 2rem;">
+            <form [formGroup]="registerForm">
                 <br>
                 <div class="form-row">
                   <div class="col-md-6 mb-3">
                     <label for="validationCustom01">Nombre</label>
-                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom01" required>
-                    <div class="valid-feedback">
-                      Looks good!
+                    <input
+                      type="text"
+                      class="form-control"
+                      style="border-color:#595661;"
+                      id="validationCustom01"
+                      formControlName="name"
+                      [ngClass]="{'is-invalid': this.registerForm.controls['name'].invalid}"
+                    >
+                    <div
+                      *ngIf="this.registerForm.controls['name'].touched && this.registerForm.controls['name'].errors?.['required']"
+                      class="text-danger">
+                      Campo requerido
+                    </div>
+                    <div *ngIf="this.registerForm.controls['name'].errors?.['minlength']" class="text-danger">
+                      el nombre tiene que tener minimo 2 caracteres
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="validationCustom02">Apellido</label>
-                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom02" required>
-                    <div class="valid-feedback">
-                      Looks good!
+                    <input type="text"
+                    class="form-control"
+                    style="border-color:#595661;"
+                    id="validationCustom02"
+                    formControlName="lastname"
+                    [ngClass]="{'is-invalid': this.registerForm.controls['lastname'].invalid}"
+                    >
+                    <div
+                      *ngIf="this.registerForm.controls['lastname'].touched && this.registerForm.controls['lastname'].errors?.['required']"
+                      class="text-danger">
+                      Campo requerido
+                    </div>
+                    <div *ngIf="this.registerForm.controls['lastname'].errors?.['minlength']" class="text-danger">
+                      el apellido tiene que tener minimo 2 caracteres
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="validationCustom03">Correo</label>
-                    <input type="text" class="form-control" style="border-color:#595661;" id="validationCustom03" required>
-                    <div class="valid-feedback">
-                      Looks good!
-                    </div>
+                    <input type="text"
+                    class="form-control"
+                    style="border-color:#595661;"
+                    id="validationCustom03"
+                    formControlName="email"
+                    [ngClass]="{'is-invalid': this.registerForm.controls['email'].invalid}"
+                    >
+                    <div
+                    *ngIf="this.registerForm.controls['email'].touched && this.registerForm.controls['email'].errors?.['email']"
+                    class="text-danger">
+                    El correo debe tener el formato correcto
+                  </div>
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="validationCustomUsername" >Nombre de usuario</label>
                     <div class="input-group">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"style="border-color:#595661;"  id="inputGroupPrepend">@</span>
-                      </div>
-                      <input type="text" class="form-control" style="border-color:#595661;" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                      <div class="invalid-feedback">
-                        Please choose a username.
-                      </div>
+                      <input type="text"
+                      class="form-control"
+                      style="border-color:#595661;"
+                      id="validationCustomUsername"
+                      aria-describedby="inputGroupPrepend"
+                      formControlName="username"
+                      [ngClass]="{'is-invalid': this.registerForm.controls['username'].invalid}"
+                      >
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['username'].touched && this.registerForm.controls['username'].errors?.['required']"
+                      class="text-danger">
+                      Campo requerido
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['username'].errors?.['pattern']"
+                      class="text-danger"
+                    >
+                      El nombre de usuario necesita minimo una número
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustomUsername">Contraseña</label>
+                    <div class="input-group">
+                      <input type="password"
+                      class="form-control"
+                      style="border-color:#595661;"
+                      id="validationCustomUsername"
+                      aria-describedby="inputGroupPrepend"
+                      formControlName="password"
+                      [ngClass]="{'is-invalid': this.registerForm.controls['password'].invalid}"
+                      >
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['password'].touched && this.registerForm.controls['password'].errors?.['required']"
+                      class="text-danger">
+                      Campo requerido
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['password'].errors?.['pattern']"
+                      class="text-danger"
+                    >
+                      El nombre de usuario necesita minimo una número
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustomUsername">Repita la Contraseña</label>
+                    <div class="input-group">
+                      <input type="password"
+                      class="form-control"
+                      style="border-color:#595661;"
+                      id="validationCustomUsername"
+                      aria-describedby="inputGroupPrepend"
+                      formControlName="repeatpassword"
+                      [ngClass]="{'is-invalid': this.registerForm.controls['repeatpassword'].invalid}"
+                      >
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['repeatpassword'].touched && this.registerForm.controls['repeatpassword'].errors?.['required']"
+                      class="text-danger">
+                      Campo requerido
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['repeatpassword'].errors?.['pattern']"
+                      class="text-danger"
+                    >
+                      El nombre de usuario necesita minimo una número
                     </div>
                   </div>
                 </div>
@@ -44,7 +135,7 @@
                 </div>
                 <div class="form-group">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox"style="border-color:#595661;" value="" id="invalidCheck" required>
+                    <input class="form-check-input" type="checkbox"style="border-color:#595661;" value="" id="invalidCheck">
                     <label class="form-check-label" for="invalidCheck" style="font-size:0.8rem ;">
                     Al registrarse, confirma haber leído y aceptado Términos y condiciones y la Política de privacidad.
                     </label>
@@ -54,30 +145,18 @@
                   </div>
                 </div>
                 <br>
-                <button class="btn btn-primary" style="background-color:#595661 ;border-color: white" type="submit">Crear cuenta</button>
+                <button
+                  class="btn btn-primary"
+                  style="background-color:#595661 ;border-color: white"
+                  type="submit"
+                  (click)="enviar()"
+                >Crear cuenta</button>
               </form>
-        </div> 
+              <br>
+              <div class="col-md-6 mb-3" *ngIf="boolregister != false">
+                <div class="alert alert-success" role="alert">
+                  Cuenta creada con exito!
+                </div>
+              </div>
+        </div>
         <div class="col"> <img src="../../assets/images/registro.png" alt=""></div>
-   
-
-  
-  <script>
-  // Example starter JavaScript for disabling form submissions if there are invalid fields
-  (function() {
-    'use strict';
-    window.addEventListener('load', function() {
-      // Fetch all the forms we want to apply custom Bootstrap validation styles to
-      var forms = document.getElementsByClassName('needs-validation');
-      // Loop over them and prevent submission
-      var validation = Array.prototype.filter.call(forms, function(form) {
-        form.addEventListener('submit', function(event) {
-          if (form.checkValidity() === false) {
-            event.preventDefault();
-            event.stopPropagation();
-          }
-          form.classList.add('was-validated');
-        }, false);
-      });
-    }, false);
-  })();
-  </script>
