--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -4,43 +4,69 @@
 <div class="row">
   <div class="col"><img src="../../assets/images/iniciar-sesion.png" alt=""></div>
   <div class="col">
-    <form>
+    <form [formGroup]="loginForm">
       <div class="form-group row">
-      <label for="colFormLabel" class="col-sm-10 col-form-label">Correo Electronico</label>
-      <div class="col-md-6 mb-3">
-      <input type="email" class="form-control" style="border-color:#595661;" id="colFormLabel">
-    </div>
-
-    <label for="inputPassword5" class="col-sm-10 col-form-label">Contraseña</label>
-    <div class="col-md-6 mb-3">
-      <input type="password" class="form-control" style="border-color:#595661 ;" id="inputPassword5" >
-    <small id="passwordHelpBlock" class="form-text text-muted">
-        Su contraseña debe tener entre 8 y 20 caracteres, contener letras y números, y no debe contener espacios, caracteres especiales ni emoji.
-    </small>
-    </div>
-  </div>
+        <label for="colFormLabel" class="col-sm-10 col-form-label">Correo Electronico</label>
+        <div class="col-md-6 mb-3">
+          <input
+            type="email"
+            class="form-control"
+            style="border-color:#595661;"
+            formControlName="email"
+          >
+        </div>
+        <label for="inputPassword5" class="col-sm-10 col-form-label">Contraseña</label>
+        <div class="col-md-6 mb-3">
+          <input
+            type="password"
+            class="form-control"
+            style="border-color:#595661 ;"
+            formControlName="password"
+          >
+          <small id="passwordHelpBlock" class="form-text text-muted">
+              Su contraseña debe tener entre 8 y 20 caracteres, contener letras y números, y no debe contener espacios, caracteres especiales ni emoji.
+          </small>
+        </div>
+      </div>
       <div class="col-sm-10" >
         <div class="form-check" >
-          <input class="form-check-input" style="border-color:#595661;" type="checkbox" id="autoSizingCheck2">
+          <input
+            class="form-check-input"
+            style="border-color:#595661;"
+            type="checkbox"
+            formControlName="remembercheck"
+          >
           <label class="form-check-label" for="autoSizingCheck2">
             Recordarme en este dispositivo
           </label>
         </div>
       </div>
       <div class="form-check">
-        <input class="form-check-input" style="border-color:#595661;" type="checkbox" value="" id="invalidCheck" required>
+        <input
+          class="form-check-input"
+          style="border-color:#595661;"
+          type="checkbox"
+          formControlName="logincheck"
+        >
         <label class="form-check-label" for="invalidCheck">
           Acepto terminos y condiciones
         </label>
-        </div>
+      </div>
       <br>
       <div class="col-sm-10">
-        <button type="submit" class="btn btn-primary" style="background-color: #595661 ; border-color: white ;">Entrar</button>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          style="background-color: #595661 ; border-color: white ;"
+          (click)="login()"
+        >
+          Entrar
+        </button>
       </div>
-  </form>
-  <br>
-  <small id="passwordHelpBlock" class="form-text text-muted" >
-    ¿Ya tienes una cuenta? <a class="nav-link" routerLink="/iniciar-sesion" routerLinkActive="active">Inicia Sesion</a>
-  </small>
-</div>
+    </form>
+    <br>
+    <small id="passwordHelpBlock" class="form-text text-muted" >
+      ¿Ya tienes una cuenta? <a class="nav-link" routerLink="/iniciar-sesion" routerLinkActive="active">Inicia Sesion</a>
+    </small>
+  </div>
 </div>
