--- a/src/app/registrese/registrese.component.html
+++ b/src/app/registrese/registrese.component.html
@@ -53,10 +53,17 @@
                     [ngClass]="{'is-invalid': this.registerForm.controls['email'].invalid}"
                     >
                     <div
+                      *ngIf="this.registerForm.controls['email'].touched && this.registerForm.controls['email'].errors?.['required']"
+                      class="text-danger"
+                    >
+                      Campo requerido
+                    </div>
+                    <div
                     *ngIf="this.registerForm.controls['email'].touched && this.registerForm.controls['email'].errors?.['email']"
-                    class="text-danger">
-                    El correo debe tener el formato correcto
-                  </div>
+                    class="text-danger"
+                    >
+                      El correo debe tener el formato correcto
+                    </div>
                   </div>
                   <div class="col-md-6 mb-3">
                     <label for="validationCustomUsername" >Nombre de usuario</label>
@@ -92,6 +99,7 @@
                       aria-describedby="inputGroupPrepend"
                       formControlName="password"
                       [ngClass]="{'is-invalid': this.registerForm.controls['password'].invalid}"
+                      (keyup)="testSamePassword()"
                       >
                     </div>
                     <div
@@ -103,7 +111,13 @@
                       *ngIf="this.registerForm.controls['password'].errors?.['pattern']"
                       class="text-danger"
                     >
-                      El nombre de usuario necesita minimo una número
+                      La contraseña debe tener minimo 8 caracteres y minimo 1 número.
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['password'].touched && this.registerForm.controls['password'].value.length >=8 && booltestpass == false"
+                      class="text-danger"
+                    >
+                      La contraseña y repetir contraseña deben coincidir
                     </div>
                   </div>
                   <div class="col-md-6 mb-3">
@@ -116,6 +130,7 @@
                       aria-describedby="inputGroupPrepend"
                       formControlName="repeatpassword"
                       [ngClass]="{'is-invalid': this.registerForm.controls['repeatpassword'].invalid}"
+                      (keyup)="testSamePassword()"
                       >
                     </div>
                     <div
@@ -127,7 +142,13 @@
                       *ngIf="this.registerForm.controls['repeatpassword'].errors?.['pattern']"
                       class="text-danger"
                     >
-                      El nombre de usuario necesita minimo una número
+                      La contraseña debe tener minimo 8 caracteres y minimo 1 número.
+                    </div>
+                    <div
+                      *ngIf="this.registerForm.controls['repeatpassword'].touched && this.registerForm.controls['repeatpassword'].value.length >=8 && booltestpass == false"
+                      class="text-danger"
+                    >
+                      La contraseña y repetir contraseña deben coincidir
                     </div>
                   </div>
                 </div>
@@ -135,11 +156,19 @@
                 </div>
                 <div class="form-group">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox"style="border-color:#595661;" value="" id="invalidCheck">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      style="border-color:#595661;"
+                      formControlName="registercheck"
+                    >
                     <label class="form-check-label" for="invalidCheck" style="font-size:0.8rem ;">
                     Al registrarse, confirma haber leído y aceptado Términos y condiciones y la Política de privacidad.
                     </label>
-                    <div class="invalid-feedback">
+                    <div
+                      *ngIf="this.registerForm.controls['registercheck'].touched && this.registerForm.controls['registercheck'].errors?.['required']"
+                      class="text-danger"
+                    >
                       You must agree before submitting.
                     </div>
                   </div>
