--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -11,10 +11,20 @@
   <p class="card-text fst-italic" style="margin-left: 2rem;">¡En tus tiendas preferidads y muchas mas!</p>
   <div class="card-group">
     <div class="card border-0" style="margin-left:2rem ;">
-      <img src="../../assets/images/corral_logo.png" class="card-img-top" alt="...">
+      <img
+        src="../../assets/images/corral_logo.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+      >
     </div>
     <div class="card border-0">
-        <img src="../../assets/images/qbano_logo.png" class="card-img-top" alt="...">
+        <img
+          src="../../assets/images/qbano_logo.png"
+          class="card-img-top"
+          alt="..."
+          (click)="mostrarCupon($event)"
+        >
       </div>
     <div class="card border-0">
         <img src="../../assets/images/randys_icono.png" class="card-img-top" alt="...">
