agregando funcionalidad a cada imagen de cupon en cuenta y cambiando css, ademas de agregando pagina de contacto

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -7,8 +7,8 @@
   <h6 class="card-title fw-bold" style="margin-left: 2rem;">FoodCupons</h6>
   <p class="card-text" style="margin-left: 2rem;">¡Todos los descuentos en un solo lugar! Paga Menos, Come Mas</p>
 </div>
-<h6 class="card-title fw-bold" style="margin-left: 2rem;">Consulta los mejores codigos promocionales y ofertas</h6>
-  <p class="card-text fst-italic" style="margin-left: 2rem;">¡En tus tiendas preferidads y muchas mas!</p>
+<h6 class="card-title fw-bold" style="margin-left: 2rem;">A continuacion los mejores codigos promocionales y ofertas</h6>
+  <p class="card-text fst-italic" style="margin-left: 2rem;">¡En tus tiendas preferidas y muchas mas!</p>
   <div class="card-group">
     <div class="card border-0" style="margin-left:2rem ;">
       <img
@@ -27,74 +27,180 @@
         >
       </div>
     <div class="card border-0">
-        <img src="../../assets/images/randys_icono.png" class="card-img-top" alt="...">
+        <img
+        src="../../assets/images/randys_icono.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+        >
     </div>
     <div class="card border-0">
-        <img src="../../assets/images/crepes&wafles_wafles.png" class="card-img-top" alt="...">
+        <img
+        src="../../assets/images/crepes&wafles_wafles.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+        >
     </div>
     <div class="card border-0 bg-transparent">
-        <img src="../../assets/images/calimio_logo.png" class="card-img-top" alt="...">
+        <img
+        src="../../assets/images/calimio_logo.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+        >
     </div>
     <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/wok_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/wok_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-    <img src="../../assets/images/burguer_king_logo.png" class="card-img-top" alt="...">
+    <img
+    src="../../assets/images/burguer_king_logo.png"
+    class="card-img-top"
+    alt="..."
+    (click)="mostrarCupon($event)"
+    >
   </div>
   <div class="card border-0 bg-transparent" style="margin-right: 2rem;">
-  <img src="../../assets/images/dominos_logo.png" class="card-img-top" alt="...">
+  <img
+  src="../../assets/images/dominos_logo.png"
+  class="card-img-top"
+  alt="..."
+  (click)="mostrarCupon($event)"
+  >
   </div>
 </div>
   <div class="card-group">
     <div class="card border-0 bg-transparent">
-        <img src="../../assets/images/presto_logo.png" class="card-img-top" alt="...">
+        <img
+        src="../../assets/images/presto_logo.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+        >
     </div>
     <div class="card border-0 bg-transparent">
-        <img src="../../assets/images/kfc_logo.png" class="card-img-top" alt="...">
+        <img
+        src="../../assets/images/kfc_logo.png"
+        class="card-img-top"
+        alt="..."
+        (click)="mostrarCupon($event)"
+        >
     </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/mcdonalds_logo.png" alt="...">
+      <img
+      src="../../assets/images/mcdonalds_logo.png"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/sierra_nevada_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/sierra_nevada_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
     </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/papa_jons_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/papa_jons_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/ppc_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/ppc_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/spoleto_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/spoleto_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/don_jediondo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/don_jediondo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
 </div>
 <div class="card-group">
   <div class="card border-0" style="margin-left:2rem ;">
-    <img src="../../assets/images/andres_carnederes.png" class="card-img-top" alt="...">
+    <img
+    src="../../assets/images/andres_carnederes.png"
+    class="card-img-top"
+    alt="..."
+    (click)="mostrarCupon($event)"
+    >
   </div>
   <div class="card border-0 bg-transparent" style="margin-left: 2rem;">
-      <img src="../../assets/images/dogger_logo.png" class="card-img-top" alt="...">
+      <img src="../../assets/images/dogger_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/arroz_paisa_logo.png" class="card-img-top" alt="...">
+      <img
+      src="../../assets/images/arroz_paisa_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
   <div class="card border-0 bg-transparent">
-      <img src="../../assets/images/mis_carnes_parrilla_logo.png" class="card-img-top" alt="...">
+      <img src="../../assets/images/mis_carnes_parrilla_logo.png"
+      class="card-img-top"
+      alt="..."
+      (click)="mostrarCupon($event)"
+      >
   </div>
 <div class="card border-0 bg-transparent">
-    <img src="../../assets/images/yanuba-logo.png" alt="...">
+    <img
+    src="../../assets/images/yanuba-logo.png"
+    alt="..."
+    (click)="mostrarCupon($event)"
+    >
 </div>
 <div class="card border-0 bg-transparent">
-    <img src="../../assets/images/la_gordis_logo.png" class="card-img-top" alt="...">
+    <img
+    src="../../assets/images/la_gordis_logo.png"
+    class="card-img-top"
+    alt="..."
+    (click)="mostrarCupon($event)"
+    >
   </div>
 <div class="card border-0 bg-transparent">
-    <img src="../../assets/images/buffalo_wings_alitas_logo.png" class="card-img-top" alt="...">
+    <img
+    src="../../assets/images/buffalo_wings_alitas_logo.png"
+    class="card-img-top"
+    alt="..."
+    (click)="mostrarCupon($event)"
+    >
 </div>
 <div class="card border-0 bg-transparent" style="margin-right: 2rem;">
-  <img src="../../assets/images/parrilla_boyacense_logo.png" class="card-img-top" alt="...">
+  <img
+  src="../../assets/images/parrilla_boyacense_logo.png"
+  class="card-img-top"
+  alt="..."
+  (click)="mostrarCupon($event)"
+  >
   </div>
 </div>
 <nav aria-label="..." style="margin-left:2rem ;">
