--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,1 +1,31 @@
-<p>contacto works!</p>
+<br>
+<h3 style="margin-left:2rem ;">Contactenos</h3>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body" style="margin-left:1rem ;">
+        <h5 class="card-title">Estaremos en contacto lo antes posible</h5>
+        <br>
+        <p class="card-text">info@foodcupons.com</p>
+        <p class="card-text">+57 3002222222</p>
+        <p class="card-text">cra8a #140-78, Bogota-Colombia</p>
+        <br>
+        <label for="formControlName" class="form-label" >Nombre y Apellido</label>
+          <input type="text" class="form-control" style="border-color: #595661">
+        <label for="formControlName" class="form-label">Correo</label>
+          <input type="email" class="form-control" style="border-color: #595661">
+        <label for="formControlName" class="form-label">Telefono</label>
+          <input type="phone" class="form-control" style="border-color: #595661">
+          <br>
+        <button type="submit" class="btn btn-secondary">Submit</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body text-end">
+        <img src="../../assets/images/contact-us.png" alt="" style="height:29.5rem ;">
+      </div>
+    </div>
+  </div>
+</div>
