--- a/src/app/cupones/cupones.component.html
+++ b/src/app/cupones/cupones.component.html
@@ -1,14 +1,23 @@
-<div class="row">
-  <div class="col">
-    <img
-    src="{{this.imgRoute}}"
-    >
-  <div class="col">
-    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+<br>
+
+<div class="card text-center">
+  <div class="card-header fs-5 fw-bold">
+    CUPON
+  </div>
   <div class="card-body">
-    <h5 class="card-title">CUPON</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">{{this.cupon}}</a>
+  <img
+  src="{{this.imgRoute}}"
+  class="card-img-top"
+  alt="..."
+  style="width: 20% ;height:20%; "
+  >
+  <div class="card-body">
+    <p class="card-text">El siguiente es un cupon de $40.000 COP en un combo Corralazo en tu Primera Compra</p>
+    <div class="d-grid gap-2 col-2 mx-auto">
+      <button class="btn btn-primary" style="background-color:#595661 ; border-color: white;" type="button">{{this.cupon}}</button>
+    </div>
   </div>
 </div>
+</div>
+
+
