--- a/src/app/cupones/cupones.component.html
+++ b/src/app/cupones/cupones.component.html
@@ -12,7 +12,7 @@
   style="width: 20% ;height:20%; "
   >
   <div class="card-body">
-    <p class="card-text">El siguiente es un cupon de $40.000 COP en un combo Corralazo en tu Primera Compra</p>
+    <p class="card-text">El siguiente es un cupon de $50.000 COP en tu Primera Compra</p>
     <div class="d-grid gap-2 col-2 mx-auto">
       <button class="btn btn-primary" style="background-color:#595661 ; border-color: white;" type="button">{{this.cupon}}</button>
     </div>
